fix auth; fix casting Long<->Timestamp; fix default values